--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        server-dir: /regex-recipes
+        server-dir: /regex-recipes/
         server: mapazmin.ftp.tools
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
